feat: implement Redis-backed hybrid feed caching and smart refill logic in FeedServiceImpl